# miopyspedas

./: README.md  pyproject.toml  setup.py  setup_old.py
miopyspedas/: __init__.py  load.py
miopyspedas/bc/mmo/: config.py  load.py
miopyspedas/bc/mmo/spm/: spm.py
miopyspedas/spm/: spm.py
